# Rust-Mnemonic-Generator

./: .gitignore  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  Rust-Mnemonic-Generator  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust-v2.yml  rust.yml
src/: main.rs
