[package]
name = 'Rust-Mnemonic-Generator'
version = '1.0.4'
edition = '2024'

[dependencies]
bs58 = '0.5.1'
num-bigint = "0.4.6"
num-traits = "0.2.15"
num-integer = "0.1.46"
rand = '0.9.0'
sha2 = '0.10'
sha3 = '0.10'
ripemd = '0.1.3'
hmac ={ version = '0.12.1', features = ['std'] }
bitcoin = '0.32.5'
secp256k1 = '0.30.0'
pbkdf2 = '0.12.2'
hex = '0.4.3'
clap = { version = '4.0.29', features = ['derive'] }